Events and executables

--- a/components/hello-world/main.html
+++ b/components/hello-world/main.html
@@ -1,1 +1,3 @@
-<p>Hello {planet}</p>
+<p>Hello {{"this is " + planet}}</p>
+{{sun}}
+<button type="button" name="button" e:click='console.log(planet); changePlanet()'>Change planet!</button>
