--- a/components/hello-world/main.html
+++ b/components/hello-world/main.html
@@ -1,3 +1,4 @@
 <p>Hello {{"this is " + planet}}</p>
 {{sun}}
-<button type="button" name="button" e:click='console.log(planet); changePlanet()'>Change planet!</button>
+{{ __inject }}
+<button type="button" name="button" j@e:click='console.log(planet); changePlanet()'>Change planet!</button>
