--- a/components/hello-world/main.html
+++ b/components/hello-world/main.html
@@ -1,4 +1,7 @@
 <p j@if="planet == 'mars'">Hello {{"this is " + planet}}</p>
 {{planet}} {{sun}}
-{{ __inject }}
+{{ $inject }}
 <button type="button" name="button" j@e:click='console.log(planet); changePlanet()'>Change planet!</button>
+<p j@for="iter">
+  {{$key}} => {{$value}}
+</p>
