--- a/components/hello-world/main.html
+++ b/components/hello-world/main.html
@@ -6,6 +6,7 @@
 <p @for="iter">
   {{$key}} => {{$value}}
 </p>
+{{typeof test != 'undefined' ? test : 'no test'}}
 {{typeof pass != 'undefined' ? pass : 'no pass'}}
 <h1>
   <p>
