--- a/components/second-war/main.html
+++ b/components/second-war/main.html
@@ -1,4 +1,5 @@
-second {{pass}}
-<hello-world @b:pass="pass">
+second {{pass}} {{test}}
+<button @e:click="testFunc()" name="button">change test</button>
+<hello-world @b:pass="pass" @i:test="test">
   <h3>Bbb</h3>
 </hello-world>
