Children overwritting fix

--- a/components/hello-world/main.html
+++ b/components/hello-world/main.html
@@ -3,3 +3,4 @@
 </p>
 <button type="button" name="button" @e:click='changePass()'>Change pass!</button>
 <second-bind @b:pass2="pass"></second-bind>
+<second-bind></second-bind>
