Fix component dowloading and binding

--- a/components/hello-world/main.html
+++ b/components/hello-world/main.html
@@ -2,5 +2,7 @@
   hello world {{ typeof pass != 'undefined' ? pass : 'no pass'}}
 </p>
 <button type="button" name="button" @e:click='changePass()'>Change pass!</button>
-<second-bind @b:pass2="pass"></second-bind>
-<second-bind></second-bind>
+<second-bind @b:pass2="pass" @o:out="console.log('out', $event)"></second-bind>
+<p @for="iter" @a:style="'background-color:black;padding:5px;'">
+  #{{ $key }}
+</p>
