--- a/components/second-war/main.html
+++ b/components/second-war/main.html
@@ -2,5 +2,5 @@
   second war {{ typeof pass != 'undefined' ? pass : 'no pass'}}
 </p>
 <button @e:click="changePass()" name="button">change test</button>
-<hello-world @b:pass="pass">
+<hello-world @b:pass="pass" @i:iter="3">
 </hello-world>
