--- a/components/third-check/main.html
+++ b/components/third-check/main.html
@@ -1,3 +1,2 @@
-<p @for="settings">
-  <input type="text" @a:name="$key" @a:value="$value">
-</p>
+{{ $inject }}
+<button type="button" name="button" @e:click="moreGreetings()">MOREee</button>
