--- a/components/third-check/third-check.html
+++ b/components/third-check/third-check.html
@@ -1,2 +1,5 @@
-{{ $inject }}
+<dito-inject></dito-inject>
+<p @for="parentIter">
+  Test
+</p>
 <button type="button" name="button" @e:click="moreGreetings()">MOREee</button>
