--- a/components/third-check/third-check.html
+++ b/components/third-check/third-check.html
@@ -1,5 +1,6 @@
-<dito-inject></dito-inject>
+<dito-inject dito-pack="package1"></dito-inject>
 <p @for="parentIter">
   Test
 </p>
+<dito-inject dito-pack="package2"></dito-inject>
 <button type="button" name="button" @e:click="moreGreetings()">MOREee</button>
