--- a/components/second-bind/second-bind.html
+++ b/components/second-bind/second-bind.html
@@ -1,7 +1,7 @@
 <button type="button" @e:click="moreGreetings2()">MORE</button>
 <third-check @b:parentIter="iter" @e:click="console.log('hello third')">
-  <p @for="iter">
+  <hello-world dito-pack="package1" @e:click="console.log('hello world')"></hello-world>
+  <p @for="iter" dito-pack="package2">
     {{ greetings }}
   </p>
-  <hello-world dito-pack="package1" @e:click="console.log('hello world')"></hello-world>
 </third-check>
