--- a/tests/components/test-bind/test-bound/test-bound.html
+++ b/tests/components/test-bind/test-bound/test-bound.html
@@ -1,1 +1,4 @@
-Bound - {{bound}}
+<p>
+  Bound - {{bound}}
+  <button type="button" name="button" @e:click="bound = 'set'">Set bound</button>
+</p>
