--- a/tests/components/test-bind/test-bind.html
+++ b/tests/components/test-bind/test-bind.html
@@ -1,7 +1,7 @@
 <p>
   Bind {{ bind }}
 </p>
-<test-bound @for='iter'></test-bound>
+<test-bound @for='iter' @b:bound="bind"></test-bound>
 <div class="">
   <p>
     <input type="text" name="" @b:value="iter">
