--- a/tests/components/test-bind/test-bound/test-bound.html
+++ b/tests/components/test-bind/test-bound/test-bound.html
@@ -1,4 +1,6 @@
 <p>
   Bound - {{bound}}
   <button type="button" name="button" @e:click="bound = 'set'">Set bound</button>
+  <button type="button" name="button" @e:click="output()">Output</button>
 </p>
+<dito-inject></dito-inject>
