--- a/tests/components/test-bind/test-bound/test-bound.html
+++ b/tests/components/test-bind/test-bound/test-bound.html
@@ -5,3 +5,4 @@
   <button type="button" name="button" @e:click="output()">Output</button>
 </p>
 <dito-inject></dito-inject>
+<dito-inject @pack="pack1"></dito-inject>
