--- a/tests/components/test-bind/test-bind.html
+++ b/tests/components/test-bind/test-bind.html
@@ -9,4 +9,5 @@
     </test-bound>
   </div>
 </div>
+<p @for="2" @if="display" name="ifForCheck"></p>
 <input type="text" name="" @b:value="bind" id="native">
