--- a/tests/components/test-events/test-events.html
+++ b/tests/components/test-events/test-events.html
@@ -1,6 +1,6 @@
 <button type="button" name="button" @e:click="event = $event; type = 'click'" id="click">Click</button>
 <input type="text" name="" value="" @e:focusin="updateEvent($event)" id="focus">
-<test-event-injected>
+<test-injected>
   <div @e:mouseover="updateEvent($event)" id="mouseover">
   Over meee</div>
-</test-event-injected>
+</test-injected>
