Injected attribute test

--- a/tests/components/test-attr/test-attr.html
+++ b/tests/components/test-attr/test-attr.html
@@ -1,2 +1,5 @@
 <test-empty @a:name="'name'" @a:id="id"></test-empty>
+<test-injected>
+  <p @a:class="classTest" @a:id="nativePId"></p>
+</test-injected>
 <div @a:name="'native-name'" @a:id="nativeId"></div>
