Test to check proper overriding of inputed values and feature removed

--- a/tests/components/test-input/test-input.html
+++ b/tests/components/test-input/test-input.html
@@ -1,2 +1,3 @@
 <test-empty @i:inputTest="inputValue"></test-empty>
 <div @i:className="inputClass" id="div-test"></div>
+<test-input-child @i:inputValueChild="inputValue"></test-input-child>
