For inherit fix

--- a/tests/components/test-for/test-for.html
+++ b/tests/components/test-for/test-for.html
@@ -1,3 +1,6 @@
 <div @for="items" @value="item">
-  {{ item.value }}
+  {{ item.value }} =>
+  <span @for="item.values" @value="value">
+    {{ value.number }}
+  </span>
 </div>
