--- a/tests/components/test-inject/test-inject.html
+++ b/tests/components/test-inject/test-inject.html
@@ -6,29 +6,35 @@
 </test-injected>
 <test-inject-pack1>
   <h1 name="titleInvisible">Pack1: Should not be rendered</h1>
-  <h1 @pack="pack1" name="titleVisible">Pack1: Should be rendered</h1>
-  <h2 @pack="pack1" name="subTitleVisible">Pack1: Should also be rendered</h2>
-  <p @pack="pack1" @if="true" class="pack1" name="visible">
+  <h1 @pack="'pack1'" name="titleVisible">Pack1: Should be rendered</h1>
+  <h2 @pack="'pack1'" name="subTitleVisible">Pack1: Should also be rendered</h2>
+  <p @pack="'pack1'" @if="true" class="pack1" name="visible">
     Pack2: Should be rendered and visible
   </p>
-  <p @pack="pack1" @if="false" class="pack1" name="hidden">
+  <p @pack="'pack1'" @if="false" class="pack1" name="hidden">
     Pack2: Should be rendered and be invisible
   </p>
-  <div @pack="pack1"  @for="2" name="twice" class="pack1">
+  <div @pack="'pack1'"  @for="2" name="twice" class="pack1">
     Should be rendered twice
   </div>
 </test-inject-pack1>
 <test-inject-pack2>
   <h1 name="titleInvisible">Pack2: Should not be rendered</h1>
-  <h1 @pack="pack2" class="pack2" name="titleVisible">Pack2: Should be rendered</h1>
-  <h2 @pack="pack2" class="pack2" name="subTitleVisible">Pack2: Should also be rendered</h2>
-  <p @pack="pack2" @if="true" class="pack2" name="visible">
-    Pack2: Should be rendered and visible
+  <h1 @pack="'pack2'" class="pack2" name="titleVisible">Pack2: Should be rendered</h1>
+  <h2 @pack="'pack2'" class="pack2" name="subTitleVisible">Pack2: Should also be rendered</h2>
+  <p @pack="'pack2'" @if="true" class="pack2" name="visible">
+    Pack2: Should be rendered and visible {{ test }}
   </p>
-  <p @pack="pack2" @if="false" class="pack2" name="hidden">
+  <p @pack="'pack2'" @if="false" class="pack2" name="hidden">
     Pack2: Should be rendered and be invisible
   </p>
-  <div @pack="pack2" @for="2" name="twice" class="pack2">
+  <div @pack="'pack2'" @for="2" name="twice" class="pack2">
     Should be rendered twice
   </div>
 </test-inject-pack2>
+
+<test-inject-pack3>
+  <h1 @pack="'pack3'" class="pack3" @uname="block">
+    {{ test }} {{ block.a }}
+  </h1>
+</test-inject-pack3>
