Fix injected component not rendering

--- a/tests/components/test-inject/test-inject.html
+++ b/tests/components/test-inject/test-inject.html
@@ -38,3 +38,7 @@
     {{ test }} {{ block.a }}
   </h1>
 </test-inject-pack3>
+
+<test-injected>
+  <test-inject-pack4></test-inject-pack4>
+</test-injected>
