--- a/tests/components/test-inject/test-inject.html
+++ b/tests/components/test-inject/test-inject.html
@@ -40,5 +40,5 @@
 </test-inject-pack3>
 
 <test-injected>
-  <test-inject-pack4 @o:emitted="emitted = $event"></test-inject-pack4>
+  <test-inject-pack4 @o:emitted="emitted = $event" @b:bind="bind"></test-inject-pack4>
 </test-injected>
