Fix inject in for loop skipping other than first clones

--- a/tests/components/test-for-nested/test-for-nested.html
+++ b/tests/components/test-for-nested/test-for-nested.html
@@ -10,3 +10,6 @@
     </test-for-nested-lvl-2>
   </div>
 </div>
+<test-for-loop-inject>
+  <p @a:title="use">{{ use }}</p>
+</test-for-loop-inject>
