Fix double injection in for not updating use variable

--- a/tests/components/test-for-nested/test-for-nested.html
+++ b/tests/components/test-for-nested/test-for-nested.html
@@ -11,5 +11,7 @@
   </div>
 </div>
 <test-for-loop-inject>
-  <p @a:title="use">{{ use }}</p>
+  <test-injected>
+    <p @a:title="use.num">{{ use.num }}</p>
+  </test-injected>
 </test-for-loop-inject>
